# exo

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  Fork.md  LICENSE  README.md  adapter-arch.md  email-tool-arch.md  exo.sh  exoharness-arch.md  exospooky.sh  index.html  mise.toml  outside-exoclaw-changes.md  package.json  pnpm-lock.yaml  setup.sh  skills-arch.md  tsconfig.json  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  integration.yml
containers/claude-code-sandbox/: Dockerfile
containers/codex-sandbox/: Dockerfile
containers/cursor-sdk-sandbox/: Containerfile
containers/opencode-sandbox/: Containerfile
crates/cli/: Cargo.toml
crates/cli/src/: adapters.rs  env.rs  env_tests.rs  exoclaw.rs  main.rs  mount_tests.rs  naming_tests.rs  repl_tests.rs  schedule.rs  secret_tests.rs  tui.rs
crates/cli/tests/: daytona_backend.rs  e2b_backend.rs  e2b_live.rs  e2b_resume_harness.rs  integration_chat.rs  integration_chat_linux.rs  lifecycle_resume.rs  memory_integration.rs  repl_model_error.rs  sandbox_start_process_live.rs  snapshot_round_trip.rs  snapshot_round_trip_daytona.rs  sprites_backend.rs  teleport_docker_to_daytona.rs  vercel_backend.rs
crates/cost/: Cargo.toml
crates/cost/src/: lib.rs  loader.rs  table.rs
crates/executor/: Cargo.toml
crates/executor/src/: adapter_irc.rs  adapter_registry.rs  adapter_runtime.rs  adapter_store.rs  adapter_tools.rs  adapter_types.rs  adapter_worker.rs  agent_sandbox.rs  basic.rs  basic_tests.rs  braintrust.rs  braintrust_tests.rs  conversation_events.rs  conversation_sandbox.rs  conversation_wakeup.rs  execution_tracing.rs  executor_types.rs  harness_basic.rs  harness_basic_tests.rs  harness_config.rs  harness_executor.rs  harness_facade.rs  harness_helpers.rs  harness_js_repl.rs  harness_runtime.rs  harness_tool.rs  harness_types.rs  lib.rs  local_sandbox.rs  mesh_work_source.rs  policy_sandbox.rs  pricing_loader.rs  rlm.rs  rlm_tests.rs  runner_pool.rs  scheduler_runtime.rs  scheduler_store.rs  scheduler_types.rs  shared.rs  test_support.rs  (+3 more)
crates/executor/src/adapter/: mod.rs  registry.rs  runtime.rs  store.rs  tools.rs  types.rs  worker.rs
crates/exoharness/: Cargo.toml
crates/exoharness/src/: basic.rs  basic_tests.rs  contract_tests.rs  coordinator.rs  coordinator_tests.rs  daytona.rs  e2b.rs  http.rs  http_tests.rs  lib.rs  oauth.rs  pricing.rs  protocol.rs  sandbox.rs  secrets.rs  server.rs  sprites.rs  storage.rs  test_support.rs  types.rs  uuid7.rs
crates/exoharness/src/http/: client.rs  process.rs  server.rs
crates/exoharness/src/sandbox_provider/: CLOUD_WORKSTATIONS.md  aws_agentcore.rs  aws_lambda_microvm.rs  cloud_workstations.rs  codex_relay.rs  daytona.rs  docker.rs  e2b.rs  mod.rs  process_bridge.rs  proxy.rs  sprites.rs  vercel.rs
docs/: EXO-BASICS.md  EXOREADME.md  FORK-IMPLEMENTATION-SUMMARY.md  RSI.md  coding-agent-harnesses.md  cost-tracking-design.md  discord-voice-design.md  exo-prompts.md  exoharness-http.md  fork-test-plan.md  operating-exo.md  requirements.md  sandbox-snapshots.md  self-cost-opt-demo-notes.md  self-cost-optimization-demo-report.md  self-cost-optimization-demo.md  tools.md  ts-runner-pool-design.md
docs-site/: _config.yml  index.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
docs-site/app/: layout.tsx
docs-site/concepts/: adapters.md  bindings-and-secrets.md  data-model.md  executors.md  exoharness-and-executor.md  index.md  sandboxes.md  time-travel.md
docs-site/development/: index.md
docs-site/examples/: index.md
docs-site/getting-started/: index.md  installation.md  quick-start.md  sandboxed-conversation.md
docs-site/lib/: layout.shared.tsx  source.ts
docs-site/tutorials/: index.md
docs/design/: adapter-arch.md  competent-coding-agent.md  cost-tracking-design.md  exoharness-server-plan.md  local-sandbox-design.md  skills-arch.md  tool-support-plan.md
evaluation/: .gitignore  EVAL_PLAN.md  README.md  build-bundle.sh  gen_report.py  ran_graphs.py  run-horizon.sh  run.sh  setup.sh
evaluation/agent-parity/: .gitignore  README.md  REPORT.md  compare.py  full_run.sh  relaunch_fast.sh  report.py  run.sh
evaluation/arc-agi/: README.md  arc_runner.py  board_emit.py  run.sh  setup.sh
evaluation/arc-agi-3/: README.md  run.sh  setup.sh
evaluation/continual-learning-bench/: README.md  gen_report.py  run.sh  setup.sh
evaluation/exo_agent/: agent.py
evaluation/horizon/: run.sh  setup.sh
evaluation/pokemon/: .gitignore  EXPLORATION.md  README.md  analyze_run.py  live_server.py  pokemon_runner.py  run.sh  safe_run.sh  setup.sh
evaluation/pokemon-gameplay/: .gitignore  DESIGN.md  README.md  drive.sh  run.sh  viewer.py
evaluation/reports/: README.md
evaluation/rpg-player/: .gitignore  HOW-IT-WORKS.md  PLAN.md  README.md  run.sh
evaluation/shared/: requirements.txt
evaluation/terminal-bench/: DESIGN.md  README.md  build-bundle.sh  gen_report.py  hard_tasks.txt  prepull-images.sh  ran_graphs.py  run.sh  setup.sh
examples/exo/: README.md  SELF.md  adapter-architecture.md  guardian-tools.ts  harness.ts  host-tools.ts  introspection-tools.ts  memory-tools.test.ts  memory-tools.ts  sandbox-tools.ts  scheduler-tools.ts  todo-tools.test.ts  todo-tools.ts
examples/exo/scheduler-runner/: Cargo.toml
examples/exo/scheduler-runner/src/: main.rs
examples/exoclaw/: README.md  SELF.md  SYSTEM_PROMPTS.md  adapter-architecture.md  fork-tools.ts  guardian-tools.test.ts  guardian-tools.ts  harness.ts  host-tools.ts  introspection-tools.ts  memory-tools.test.ts  memory-tools.ts  policy-evolve-tools.ts  policy-tools.ts  web-tools.ts  (+6 more)
scripts/: agent-harness-e2e.ts  exo.sh  exoclaw-repl  macos-keychain.sh  precommit.mjs  setup-hooks.mjs  slack-setup.mjs  webrtc-rendezvous-demo.mjs  workerclaw-e2e.ts
spec/: exoharness.md
tests/: agent-harness-events.test.ts
web/: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
website/: .assetsignore  chat.html  chat.js  components.json  index.html  vite.config.js  wrangler.jsonc
(+924 files in other folders)
