[package]
name = "exo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
executor = { path = "../executor" }
lingua.workspace = true
rustyline = "15.0.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
