[package]
name = "exo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
executor = { path = "../executor" }
lingua.workspace = true
rustyline = "15.0.0"
serde.workspace = true
serde_json.workspace = true
tabwriter.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
exoharness = { path = "../exoharness", features = ["basic-backend"] }
futures.workspace = true
tempfile = "3.23.0"
wiremock = "0.6"
