[package]
name = "exo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
aws-agentcore = ["executor/aws-agentcore"]
aws-lambda-microvm = ["executor/aws-lambda-microvm"]

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cost = { path = "../cost" }
executor = { path = "../executor" }
lingua.workspace = true
rustyline = "15.0.0"
serde.workspace = true
serde_json.workspace = true
tabwriter.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bytes.workspace = true
exoharness = { path = "../exoharness", features = [
  "basic-backend",
  "contract-tests",
] }
futures.workspace = true
tempfile = "3.23.0"
wiremock = "0.6"
