[package]
name = "executor"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
boa_engine = "0.20.0"
braintrust-llm-router.workspace = true
braintrust-sdk-rust.workspace = true
bytes.workspace = true
exoharness = { path = "../exoharness", features = ["basic-backend"] }
futures.workspace = true
lingua.workspace = true
native-tls = "0.2.18"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-native-tls = "0.3.1"
tokio-stream.workspace = true
url.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile = "3.23.0"
