[package]
name = "executor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
boa_engine = "0.20.0"
braintrust-llm-router.workspace = true
braintrust-sdk-rust.workspace = true
bytes.workspace = true
cost = { path = "../cost" }
exoharness = { path = "../exoharness", features = [
  "apple-keychain",
  "basic-backend",
] }
futures.workspace = true
lingua.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
futures.workspace = true
tempfile = "3.23.0"
