[package]
name = "exoharness"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
basic-backend = [
  "dep:aes-gcm",
  "dep:actix-web",
  "dep:base64",
  "dep:object_store",
  "dep:reqwest",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:tokio-tungstenite",
  "dep:tokio-util",
  "dep:tracing",
  "dep:url",
]
apple-keychain = ["dep:keyring", "dep:keyring-core"]
aws-agentcore = [
  "basic-backend",
  "dep:aws-config",
  "dep:aws-credential-types",
  "dep:aws-sdk-bedrockagentcore",
]
contract-tests = []

[dependencies]
aes-gcm = { version = "0.11.0-rc.3", optional = true }
actix-web = { workspace = true, optional = true }
anyhow.workspace = true
async-trait.workspace = true
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-bedrockagentcore = { workspace = true, optional = true }
base64 = { version = "0.22.1", optional = true }
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
keyring = { version = "4.0.0-rc.3", optional = true }
keyring-core = { version = "0.7.2", optional = true }
lingua.workspace = true
object_store = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.1", default-features = false, features = [
  "fs",
  "io-util",
  "net",
  "process",
  "rt",
  "sync",
  "time",
], optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
], optional = true }
tokio-util = { workspace = true, optional = true, features = ["compat"] }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4", "v7", "js"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.52.1", features = [
  "fs",
  "macros",
  "process",
  "rt",
  "sync",
  "time",
] }
