[package]
name = "exo-scheduler-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
executor = { path = "../../../crates/executor" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing.workspace = true
